<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="dada.findpeople.LoginActivity">

    <!-- Login progress -->

    <ProgressBar
        android:id="@+id/register_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />
    <ScrollView
        android:id="@+id/register_form"
        android:layout_width="340dp"
        android:layout_height="464dp">
        <LinearLayout
            android:id="@+id/email_register_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:weightSum="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="315dp"
                    android:layout_height="178dp"
                    android:src="@drawable/ic_menu_camera" />]
            </LinearLayout>
            <EditText
                android:id="@+id/email_register"
                android:text="chaojifudan@outlook.com"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1" />
            <EditText
                android:id="@+id/nickname_register"
                android:text="请把这里改掉谢谢"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_nickname"
                android:inputType="textEmailAddress"
                android:maxLines="1" />
            <EditText
                android:id="@+id/password_register"
                android:text="140311jc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:maxLines="1" />
            <EditText
                android:id="@+id/passwordAgain_register"
                android:text="140311jc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_passwordAgain"
                android:inputType="textPassword"
                android:maxLines="1" />
            <Button
                android:id="@+id/email_register_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_register"
                android:textStyle="bold" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/email_turn_to_login_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="161dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="16dp"
                    android:layout_gravity="center"
                    android:text="@string/action_turn_to_login"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>



</LinearLayout>
